fix header on firefox, add favicon

--- a/index.css
+++ b/index.css
@@ -13,10 +13,13 @@
   --standard-margin: 1rem 10vw;
   --text-margin: 0rem 10vw;
 
-  --header-margins: auto 1rem;
+  --header-margins: auto 0;
   --header-image-height: 60%;
   --header-top-height: 4rem;
   --header-nav-height: 2rem;
+  --header-gap: 2rem;
+
+  --search_border: 2px solid black;
 
   --min-footer-height: 1rem;
 
@@ -47,10 +50,13 @@
 * {
   box-sizing: border-box;
   scrollbar-width: thin;
+  margin: 0;
+  padding: 0;
 }
 
 *::-webkit-scrollbar {
   width: 6px;
+  position: absolute;
 }
 
 *::-webkit-scrollbar-thumb {
@@ -63,13 +69,10 @@
 body {
   background-color: var(--bg-colour);
   color: var(--text-colour);
-  height: auto;
-  padding: 0;
-  margin: 0;
+  width: 100%;
 }
 
 main {
-  position: relative;
   min-height: calc(100vh - var(--header-top-height) - var(--header-nav-height) - var(--min-footer-height) - 1rem);
 }
 
@@ -107,9 +110,35 @@ header {
   background-color: var(--main-colour);
   position: sticky;
   top: 0;
-  display: flex;
-  flex-direction: column;
   z-index: 2;
+}
+
+#header_top {
+  height: var(--header-top-height);
+  width: 100%;
+  display: flex;
+  align-items:space-around;
+  border-bottom: 1px solid black;
+  padding: 0;
+  margin: 0;
+}
+
+#header_left, #header_right {
+  flex: 1;
+  display: flex;
+  padding: 0 var(--header-gap);
+  gap: var(--header-gap);
+}
+
+#header_right {
+  flex-direction: row-reverse;
+}
+
+#home_link {
+  width: 25rem;
+  display: flex;
+  gap: var(--header-gap);
+
 }
 
 .logo_text {
@@ -126,18 +155,23 @@ header img {
 
 header a {
   display: flex;
+  width: calc(0.6 * var(--header-top-height));
+}
+
+#search_wrapper, #search_wrapper_mobile {
+  height: 50%;
+  margin: var(--header-margins);
+  display: flex;
+  border: var(--search_border);
+  border-radius: var(--small-border-radius);
+  padding-left: 0.25rem;
 }
 
 #search_wrapper {
-  height: 50%;
   max-width: 15rem;
-  margin: var(--header-margins);
-  display: flex;
-  border: 2px solid black;
-  border-radius: var(--small-border-radius);
 }
 
-#search_bar {
+#search_bar, #search_bar_mobile {
   height: 100%;
   font-size: 1rem;
   width: 100%;
@@ -145,19 +179,21 @@ header a {
   border-radius: var(--small-border-radius);
 }
 
-#search_bar:focus {
+#search_bar:focus, #search_bar_mobile:focus {
   outline: none;
 }
 
-#search_button {
-  height: 80%;
-  margin: auto;
+#search_button, #search_button_mobile {
+  height: 100%;
+  aspect-ratio: 1;
+  margin: 0;
+  padding: 1px;
   background-color: transparent;
   border: none;
   cursor: pointer;
 }
 
-#search_button img {
+#search_button img, #search_button_mobile img {
   border-radius: 0;
   height: 100%;
   margin: 0;
@@ -166,7 +202,6 @@ header a {
 
 #main_nav {
   height: var(--header-nav-height);
-  background-color: var(--main-colour);
   display: flex;
   border-bottom: 1px solid black;
 }
@@ -177,17 +212,6 @@ header a {
   flex: 1;
   justify-content: center;
   border-radius: var(--border-radius);
-}
-
-#header_top {
-  height: var(--header-top-height);
-  display: flex;
-  border-bottom: 1px solid black;
-  justify-content: space-between;
-}
-
-#header_gap {
-  margin: auto;
 }
 
 #hamburger {
@@ -401,7 +425,7 @@ footer ul {
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  padding: 0;
+  padding: 1rem 0 0 0;
 }
 
 @media (max-width: 240mm) {
@@ -410,17 +434,26 @@ footer ul {
     --standard-margin: 1rem 1vw;
     --footer-columns: 1;
   }
-
-  #search_bar {
-    width: 100%;
-    margin: var(--header-margins);
-  }
-
-  .mobile_hidden, #main_nav, #buttons, #logo_text_header {
+  
+  #header_top, #main_nav, #buttons {
     display: none;
   }
 
-  .desktop_hidden {
-    display: inline;
+  #header_top_mobile {
+    display: flex;
+    height: var(--header-top-height);
+    padding: auto;
+  }
+
+  .header_wrapper {
+    height: 100%;
+    display: flex;
+    flex: 1;
+    justify-content: center;
+    padding: 0 1rem;
+  }
+
+  .header_wrapper:first-of-type {
+    justify-content: start;
   }
 }
